plugins {
    id 'java-library'
    id 'application'
}

application {
    mainClass = 'com.justnothing.engine.repl.AstRepl'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    implementation 'org.jetbrains:annotations:26.1.0'
    implementation 'org.ow2.asm:asm:9.9.1'
    testImplementation 'junit:junit:4.13.2'
}

test {
    jvmArgs += [
        '--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    ]
}
